[tool.poetry]
name = "x4_pipe"
version = "1.0.0"
description = ""
authors = ["BGASM <slatte26@msu.edu>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pipdeptree = "^2.0.0"
pywin32 = "^300"
pynput = "^1.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
